# CSRBeamOptik

./: README.md  setup.cfg  setup.py
CSR_models/: Ion.nb
CSR_models/CSRing/: csr.mad8  csr.seq
CSR_models/IQTransfer/: IQ300.madx  IQ300.seq  IQ300.seq~  IQ300.twiss
CSRmodels/CSRing/: csr.mad8  csr.madx  csr.seq  run.madx
CSRmodels/IQTransfer/: IQ300.madx  IQ300.seq  IQ60.madx  IQ60.seq
CSRmodels/IQTransfer/IQ300/: IQ300.seq  run.madx
CSRmodels/IQTransfer/IQ60/: IQ60.seq  run.madx
src/CSRBeamOptik/: __init__.py  __main__.py
src/CSRBeamOptik/EUNetTools/: EUNetClient.py  EUNetClient.py~  EUNetInterface.py  EUNetInterface.py~  EUNetMap.py  EUNetPlugin.py  EUNetPlugin.py~  EUNetTest.py
src/CSRBeamOptik/beamOptik/: Elements.py  IonBeam.py  beamLines.py  constants.py  elements.py
src/CSRBeamOptik/core/: app.py  app.py~  plugin.py
src/CSRBeamOptik/util/: loadFiles.py
src/CSRBeamOptik/widgets/: __init__.py~  mainWindow.py  mainWindow.py~  mainWindow.ui  windowWidgetIQ300.py  windowWidgetIQ300.py~
src/EUNetTools/: EUNetInterface.py  EUNetMap.py  EUNetTest.py  EUNetplugin.py
src/beamOptik/: elements.py  ionBeam.py
src/widgets/: mainWindow.py  windowWidgetIQ300.py
