[metadata]
name             = CSRBeamOptik
version          = attr: CSRBeamOptik.__version__
url              = https://github.com/eccortes95/CSRBeamOptik
description      = Beam Optic application for the CSR
author           = Cristopher Cortes
author_email     = ecortesg95@gmail.com
long_description = file: README.md
license          = GPLv3+
license_file     = LICENSE
classifiers      =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
long_description_content_type = text/x-rst

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    scipy
    PyQt5
    
[options.entry_points]
gui_scripts =
    CSRBeamOptik = CSRBeamOptik.core.app:main

[flake8]
# codes: https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# default: ignore = E121,E123,E126,E133,E226,E241,E242,E704,W503,W504,W505
ignore = E126,E226,E241,E731,E741,W503,W504
max-line-length = 84
max-complexity = 11
exclude = docs,.git,build,__pycache__,dist,configFiles
